--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 			overflow: none;
 		}
 		body {
-			background-color: #2c322b;
-			color: #ffe6d4;
+			/*background-color: #2c322b;
+			color: #ffe6d4;*/
 			font-family: 'Sacramento', cursive;
 		}
 		.papyrus {
@@ -59,7 +59,7 @@
 		}
 		.sign:hover > .singature {
 			width: 150px;
-			transition: all 2s steps(50, end);
+			transition: all 1s steps(100, end);
 		}
 		#Window {
 			display: none;
@@ -79,74 +79,43 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script>
 	GAME = {
-		curtain: null,
-		papyrus: null,
+		MODAL : {
+			curtain: null,
+			papyrus: null,
+
+			init: function(){
+				this.curtain = $('#Curtain');
+				this.papyrus = $('#Window');
+
+				this.papyrus.children('div.sign').on('click', function(){
+					console.log(this);
+					this.papyrus.hide();
+					this.curtain.hide();
+				}.bind(this));
+			},
+			show: function(content){
+				this.curtain.show();
+				this.papyrus.children('div.content').text(content);
+				this.papyrus.show();
+			}
+		},
+
+		worker: null,
+
 		init: function(){
-			this.curtain = $('#Curtain');
-			this.papyrus = $('#Window');
+			this.MODAL.init();
 
-			this.papyrus.children('div.sign').on('click', function(){
-				console.log(this);
-				this.papyrus.hide();
-				this.curtain.hide();
-			}.bind(this));
+			this.worker = new Worker('engineWorker.js');
+			this.worker.addEventListener('message', function(e) {
+			  console.log('Worker said: ', e.data);
+			}, false);
 
-			for (var i = 0; i < 7; i++) {
-				this.TIMER.put(i, Math.floor(Math.random() * 23) + 1);
-			};
-			console.log(this.TIMER);
-			console.log(this.TIMER.next());
+			this.worker.postMessage({action: {who: 'time', what: 'getTime'}});
+			this.worker.postMessage({action: {who: 'time', what: 'progressTime'}});
+			this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});
 		},
 		openWindow: function(content){
-			console.log(this.curtain);
-			this.curtain.show();
-			this.papyrus.children('div.content').text(content);
-			this.papyrus.show();
-		},
-		TIMER: {
-			time: 0,
-			events: ['New Day'],
-			eventsTimes: [24],
-			put: function(event, time){
-				var indx = this.events.length;
-				for (var i = 0; i < this.eventsTimes.length; i++) {
-					if(this.eventsTimes[i] > time){
-						indx = i;
-						break;
-					}
-				};
-
-				this.eventsTimes.splice(indx, 0, time);
-				this.events.splice(indx, 0, event);
-			},
-			progress: function(){
-				var ret = [];
-				this.time++;
-				for (var i = 0; i < this.eventsTimes.length; i++) {
-					if(this.eventsTimes[i] <= this.time){
-						ret.push(this.events[i]);
-					}
-				}
-				this.eventsTimes.splice(0, ret.length);
-				this.events.splice(0, ret.length);
-
-				this.checkDay();
-				return ret;
-			},
-			next: function(){
-				var ret = [];
-				do {
-					ret = this.progress();
-				} while(ret.length == 0)
-				return ret;
-			},
-			checkDay: function(){
-				if(this.time == 24){
-					this.time = 0;
-					this.events = ['New Day'];
-					this.eventsTimes = [24];
-				}
-			},
+			this.MODAL.show(content);
 		},
 	}
 	$(function(){
