--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 			this.worker.postMessage({action: {who: 'time', what: 'getTime'}});
 			this.worker.postMessage({action: {who: 'time', what: 'progressTime'}});
-			this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});
+			this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});
 		},
 		openWindow: function(content){
 			this.MODAL.show(content);
