--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			}, false);
 
 			this.worker.postMessage({action: {who: 'time', what: 'getTime'}});
-			this.worker.postMessage({action: {who: 'time', what: 'progressTime'}});
+			//this.worker.postMessage({action: {who: 'time', what: 'progressTime'}});
 			this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});this.worker.postMessage({action: {who: 'time', what: 'nextEvents'}});
 		},
 		openWindow: function(content){
